#DIAM-207 Fom value 'default assignee' in branch editing form

--- a/Resources/views/Branch/edit.html.twig
+++ b/Resources/views/Branch/edit.html.twig
@@ -46,6 +46,7 @@
                 'title': 'Branch Details'|trans,
                 'data': [
                     form_row(form.name),
+                    form_row(form.defaultAssignee),
                     form_row(form.logoFile),
                     form_row(form.tags)
                 ]
