--- a/Resources/views/Ticket/update.html.twig
+++ b/Resources/views/Ticket/update.html.twig
@@ -45,6 +45,7 @@
                     form_row(form.status),
                     form_row(form.files),
                     form_row(form.priority),
+                    form_row(form.source),
                     form_row(form.reporter),
                     form_row(form.assignee)
                 ]
