--- a/Resources/views/Ticket/widget/info.html.twig
+++ b/Resources/views/Ticket/widget/info.html.twig
@@ -18,8 +18,8 @@
                     {{ form_row(form.status) }}
                 </div>
                 <div class="widget-actions form-actions">
-                    <button class="btn" type="reset">{{ 'Cancel'|trans }}</button>
-                    <button class="btn btn-primary" type="submit">{{ 'Change'|trans }}</button>
+                    <button class="btn" type="reset">{{ 'eltrino.diamantedesk.ui.cancel'|trans }}</button>
+                    <button class="btn btn-primary" type="submit">{{ 'eltrino.diamantedesk.ui.change'|trans }}</button>
                 </div>
             </fieldset>
             {{ form_rest(form) }}
