--- a/Resources/views/Branch/searchResult.html.twig
+++ b/Resources/views/Branch/searchResult.html.twig
@@ -11,9 +11,9 @@
 {% set recordUrl = indexer_item.recordUrl %}
 {% set title = indexer_item.recordTitle %}
 
-{% set entityType = 'Branch'|trans %}
+{% set entityType = 'eltrino.diamantedesk.branch.entity_label'|trans %}
 
 {% set entityInfo = [
-    {'title': 'Created'|trans, 'value': entity.createdAt ? entity.createdAt|oro_format_datetime : 'N/A'},
-    {'title': 'Updated'|trans, 'value': entity.updatedAt ? entity.updatedAt|oro_format_datetime : 'N/A'},
+    {'title': 'eltrino.diamantedesk.common.created'|trans, 'value': entity.createdAt ? entity.createdAt|oro_format_datetime : 'eltrino.diamantedesk.common.not_available'},
+    {'title': 'eltrino.diamantedesk.common.updated'|trans, 'value': entity.updatedAt ? entity.updatedAt|oro_format_datetime : 'eltrino.diamantedesk.common.not_available'},
 ] %}
