--- a/Resources/views/Ticket/attach.html.twig
+++ b/Resources/views/Ticket/attach.html.twig
@@ -10,12 +10,12 @@
 {% endblock %}
 
 {% block navButtons %}
-    {{ UI.button({'path' : path('diamante_ticket_view', { 'id': form.vars.value.ticketId }), 'title' : 'Cancel'|trans, 'label' : 'Cancel'|trans}) }}
+    {{ UI.button({'path' : path('diamante_ticket_view', { 'id': form.vars.value.ticketId }), 'title' : 'eltrino.diamantedesk.ui.cancel'|trans, 'label' : 'eltrino.diamantedesk.ui.cancel'|trans}) }}
     {{ UI.saveAndCloseButton() }}
 {% endblock %}
 
 {% block pageHeader %}
-    {% set title = 'Add Attachment'|trans %}
+    {% set title = 'eltrino.diamantedesk.attachment.add'|trans %}
     {% include 'OroUIBundle::page_title_block.html.twig' with { title: title } %}
 {% endblock pageHeader %}
 
@@ -23,11 +23,11 @@
     {% set id = 'ticketAttachment' %}
 
     {% set dataBlocks = [{
-        'title': 'General'|trans,
+        'title': 'eltrino.diamantedesk.common.general'|trans,
         'class': 'active',
         'subblocks': [
             {
-                'title': 'Attachment'|trans,
+                'title': 'eltrino.diamantedesk.attachment.entity_label'|trans,
                 'data': [
                     form_row(form.files),
                 ]
