--- a/Resources/views/Ticket/list.html.twig
+++ b/Resources/views/Ticket/list.html.twig
@@ -1,12 +1,12 @@
 {% extends 'OroUIBundle:actions:index.html.twig' %}
 {% import 'OroUIBundle::macros.html.twig' as UI %}
-{% set pageTitle = 'All Tickets'|trans %}
+{% set pageTitle = 'eltrino.diamantedesk.ticket.all'|trans %}
 {% block navButtons %}
     {% if resource_granted('CREATE', 'Entity:EltrinoDiamanteDeskBundle:Ticket') %}
         {{ UI.addButton({
         'path' : path('diamante_ticket_create'),
-        'title' : 'Create Ticket',
-        'label' : 'Create Ticket'
+        'title' : 'eltrino.diamantedesk.ticket.actions.create'|trans,
+        'label' : 'eltrino.diamantedesk.ticket.actions.create'|trans
         }) }}
     {% endif %}
 {% endblock %}
@@ -22,7 +22,7 @@
                     <table class="grid table-hover table table-bordered table-condensed">
                         <thead>
                         <tr>
-                            <th>Filters:</th>
+                            <th>{{ 'eltrino.diamantedesk.common.filters'|trans }}:</th>
                         </tr>
                         </thead>
                         <tbody>
