DIAM-226: Change the label of Create button on ticket view page

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -116,7 +116,7 @@
         'path': path('diamante_ticket_create'),
         'iClass': 'icon-user',
         'title': 'eltrino.diamantedesk.ticket.actions.create'|trans,
-        'label': 'eltrino.diamantedesk.ui.create'|trans
+        'label': 'eltrino.diamantedesk.ticket.actions.create'|trans
         }) }}
     {% endif %}
 
