--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -114,7 +114,7 @@
     {% if resource_granted('CREATE', 'Entity:EltrinoDiamanteDeskBundle:Ticket') %}
         {{ UI.button({
         'path': path('diamante_ticket_create'),
-        'iClass': 'icon-user',
+        'iCss': 'icon-plus',
         'title': 'eltrino.diamantedesk.ticket.actions.create'|trans,
         'label': 'eltrino.diamantedesk.ticket.actions.create'|trans
         }) }}
@@ -123,7 +123,7 @@
     {% if resource_granted('EDIT', entity) %}
         {{ UI.button({
         'path': path('diamante_ticket_update', {'id': entity.id}),
-        'iClass': 'icon-edit',
+        'iCss': 'icon-edit',
         'title': 'eltrino.diamantedesk.ticket.actions.edit'|trans,
         'label': 'eltrino.diamantedesk.ui.edit'|trans
         }) }}
@@ -132,7 +132,7 @@
     {% if resource_granted('EDIT', entity) %}
         {{ UI.button({
         'path': path('diamante_ticket_assign', {'id': entity.id}),
-        'iClass': 'icon-edit',
+        'iCss': 'icon-user',
         'title': 'eltrino.diamantedesk.ticket.actions.assign'|trans,
         'label': 'eltrino.diamantedesk.ticket.actions.assign'|trans
         }) }}
@@ -141,7 +141,7 @@
     {% if resource_granted('EDIT', entity) %}
         {{ UI.button({
         'path': path('diamante_ticket_create_attach', {'id': entity.id}),
-        'iClass': 'icon-edit',
+        'iCss': 'icon-file',
         'title': 'eltrino.diamantedesk.attachment.actions.attach'|trans,
         'label': 'eltrino.diamantedesk.attachment.actions.attach'|trans
         }) }}
