DIAM-239: New commands for API that use simple arguments

--- a/Resources/views/Branch/view.html.twig
+++ b/Resources/views/Branch/view.html.twig
@@ -73,7 +73,7 @@
     %}
 
     {% set dataBlocks = dataBlocks|merge([{
-        'title': 'Description',
+        'title': 'Description'|trans,
         'subblocks':[{
             'title': null,
             'data': [entity.description|escape('html')|nl2br]}]
