--- a/Resources/views/Branch/searchResult.html.twig
+++ b/Resources/views/Branch/searchResult.html.twig
@@ -11,9 +11,9 @@
 {% set recordUrl = indexer_item.recordUrl %}
 {% set title = indexer_item.recordTitle %}
 
-{% set entityType = 'eltrino.diamantedesk.branch.entity_label'|trans %}
+{% set entityType = 'diamante.desk.branch.entity_label'|trans %}
 
 {% set entityInfo = [
-    {'title': 'eltrino.diamantedesk.common.created'|trans, 'value': entity.createdAt ? entity.createdAt|oro_format_datetime : 'eltrino.diamantedesk.common.not_available'},
-    {'title': 'eltrino.diamantedesk.common.updated'|trans, 'value': entity.updatedAt ? entity.updatedAt|oro_format_datetime : 'eltrino.diamantedesk.common.not_available'},
+    {'title': 'diamante.desk.common.created'|trans, 'value': entity.createdAt ? entity.createdAt|oro_format_datetime : 'diamante.desk.common.not_available'},
+    {'title': 'diamante.desk.common.updated'|trans, 'value': entity.updatedAt ? entity.updatedAt|oro_format_datetime : 'diamante.desk.common.not_available'},
 ] %}
