--- a/Resources/views/Comment/edit.html.twig
+++ b/Resources/views/Comment/edit.html.twig
@@ -14,8 +14,8 @@
 {% endblock %}
 
 {% block navButtons %}
-    {{ UI.button({'path' : path('diamante_ticket_view', { 'id': ticket.id }), 'title' : 'eltrino.diamantedesk.ui.cancel'|trans, 'label' : 'eltrino.diamantedesk.ui.cancel'|trans}) }}
-    {{ UI.saveAndCloseButton(editCommand.id ? 'eltrino.diamantedesk.ui.edit'|trans : 'eltrino.diamantedesk.ui.add'|trans) }}
+    {{ UI.button({'path' : path('diamante_ticket_view', { 'id': ticket.id }), 'title' : 'diamante.desk.ui.cancel'|trans, 'label' : 'diamante.desk.ui.cancel'|trans}) }}
+    {{ UI.saveAndCloseButton(editCommand.id ? 'diamante.desk.ui.edit'|trans : 'diamante.desk.ui.add'|trans) }}
 {% endblock %}
 
 {% block pageHeader %}
@@ -24,11 +24,11 @@
             'entity':      editCommand,
             'indexPath':   path('diamante_ticket_view', {'id': ticket.id}),
             'indexLabel':  ticket.subject,
-            'entityTitle': 'eltrino.diamantedesk.comment.actions.edit'|trans
+            'entityTitle': 'diamante.desk.comment.actions.edit'|trans
         } %}
         {{ parent() }}
     {% else %}
-        {% set title = 'eltrino.diamantedesk.comment.actions.add'|trans %}
+        {% set title = 'diamante.desk.comment.actions.add'|trans %}
         {% include 'OroUIBundle::page_title_block.html.twig' with { title: title } %}
     {% endif %}
 {% endblock pageHeader %}
@@ -44,11 +44,11 @@
         {% endif %}
     {% endset %}
     {% set dataBlocks = [{
-        'title': 'eltrino.diamantedesk.common.general'|trans,
+        'title': 'diamante.desk.common.general'|trans,
         'class': 'active',
         'subblocks': [
             {
-                'title': 'eltrino.diamantedesk.comment.entity_label'|trans,
+                'title': 'diamante.desk.comment.entity_label'|trans,
                 'data': [
                     form_row(form.content),
                     form_row(form.ticketStatus),
