--- a/Resources/views/Ticket/create.html.twig
+++ b/Resources/views/Ticket/create.html.twig
@@ -10,13 +10,13 @@
 {% endblock %}
 
 {% block navButtons %}
-    {{ UI.button({'path' : path('diamante_ticket_list'), 'title' : 'eltrino.diamantedesk.ui.cancel'|trans, 'label' : 'eltrino.diamantedesk.ui.cancel'|trans}) }}
+    {{ UI.button({'path' : path('diamante_ticket_list'), 'title' : 'diamante.desk.ui.cancel'|trans, 'label' : 'diamante.desk.ui.cancel'|trans}) }}
     {{ UI.saveAndStayButton() }}
     {{ UI.saveAndCloseButton() }}
 {% endblock %}
 
 {% block pageHeader %}
-    {% set title = 'oro.ui.create_entity'|trans({'%entityName%': 'eltrino.diamantedesk.ticket.entity_label'|trans}) %}
+    {% set title = 'oro.ui.create_entity'|trans({'%entityName%': 'diamante.desk.ticket.entity_label'|trans}) %}
     {% include 'OroUIBundle::page_title_block.html.twig' with { title: title } %}
 {% endblock pageHeader %}
 
@@ -24,11 +24,11 @@
     {% set id = 'ticketDetails' %}
 
     {% set dataBlocks = [{
-        'title': 'eltrino.diamantedesk.common.general'|trans,
+        'title': 'diamante.desk.common.general'|trans,
         'class': 'active',
         'subblocks': [
             {
-                'title': 'eltrino.diamantedesk.ticket.details'|trans,
+                'title': 'diamante.desk.ticket.details'|trans,
                 'data': [
                     form_row(form.branch),
                     form_row(form.subject),
@@ -44,7 +44,7 @@
     }] %}
 
     {% set dataBlocks = dataBlocks|merge([{
-        'title' : 'eltrino.diamantedesk.common.description'|trans,
+        'title' : 'diamante.desk.common.description'|trans,
         'subblocks': [
             {
                 'title' : null,
