create table of tasks, add routing, some refactoring

--- a/Resources/front/assets/less/main.less
+++ b/Resources/front/assets/less/main.less
@@ -1,3 +1,16 @@
+@import "../js/vendor/bootstrap/less/bootstrap";
+@import "variables";
+
 body {
   padding: 80px 0 0;
 }
+
+.table {
+  thead {
+    th, td{
+      background: @gray-lighter;
+    }
+  }
+}
+
+@import "modules";
