--- a/Resources/front/assets/js/modules/Task/templates/show.ejs
+++ b/Resources/front/assets/js/modules/Task/templates/show.ejs
@@ -1,1 +1,8 @@
 <h1><%= subject %></h1>
+<p><small>Ceated at: <%= created_at %></small></p>
+<p>
+    <a class="btn btn-default js-task-list" href="#tasks">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        Back
+    </a>
+</p>
