--- a/Resources/front/assets/less/main.less
+++ b/Resources/front/assets/less/main.less
@@ -1,9 +1,17 @@
 @import "../js/vendor/bootstrap/less/bootstrap";
 @import "variables";
 
-body {
-  padding: 80px 0 0;
+html, body {
+  height: 100%;
 }
+
+body {
+  height: 100%;
+  background: #f9f9fb;
+}
+
+@import "layout/header";
+@import "layout/content";
 
 .table {
   thead {
