--- a/Resources/front/assets/less/main.less
+++ b/Resources/front/assets/less/main.less
@@ -10,6 +10,16 @@ body {
   background: #f9f9fb;
 }
 
+.blured {
+  #header, #content, #footer {
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -ms-filter: blur(2px);
+    -o-filter: blur(2px);
+    filter: blur(2px);
+  }
+}
+
 @import "layout/header";
 @import "layout/content";
 
