--- a/Resources/front/assets/js/modules/Task/templates/view.ejs
+++ b/Resources/front/assets/js/modules/Task/templates/view.ejs
@@ -1,5 +1,7 @@
 <h1><%= subject %></h1>
 <p><small>Ceated at: <%= created_at %></small></p>
+<h2>Ticket Description</h2>
+<p><%= description %></p>
 <p>
     <a class="btn btn-default js-task-list" href="#tasks">
         <span class="glyphicon glyphicon-chevron-left"></span>
