--- a/Resources/front/assets/less/main.less
+++ b/Resources/front/assets/less/main.less
@@ -1,4 +1,5 @@
-@import "../js/vendor/bootstrap/less/bootstrap";
+@import "bootstrap.less"; // custom bootstrap core file that remove glyphicons support
+@import "../js/vendor/fontawesome/less/font-awesome";
 @import "variables";
 
 html, body {
