--- a/Resources/front/assets/less/variables.less
+++ b/Resources/front/assets/less/variables.less
@@ -1,4 +1,5 @@
 @icon-font-path: "../js/vendor/bootstrap/fonts/";
+@fa-font-path: "../js/vendor/fontawesome/fonts/";
 
 @main-gutter: 40px;
 @header-height: 124px;
