--- a/Resources/views/defaultBranchNotification.html.twig
+++ b/Resources/views/defaultBranchNotification.html.twig
@@ -1,6 +1,6 @@
 {% import 'OroUIBundle::macros.html.twig' as UI %}
 
-<div id="diam-default-branch-message"><i class="icon-warning-sign"></i> The Branch configured as a default for Email Processing and can't be deleted.</div>
+<div id="diam-default-branch-message"><i class="icon-warning-sign"></i> {{ 'diamante.desk.branch.placeholders.default'|trans }}</div>
 
 <script>
     require(['jquery'], function($){
