--- a/Resources/front/assets/js/modules/Task/templates/view.ejs
+++ b/Resources/front/assets/js/modules/Task/templates/view.ejs
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-8">
         <div class="ticket-actions pull-right">
-            <button class="btn btn-primary">Edit Ticket</button>
+            <button class="btn btn-primary js-edit-ticket">Edit Ticket</button>
             <button class="btn btn-primary">Join Ticket</button>
             <div class="btn-group">
                 <div class="btn btn-primary">6</div>
